--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" 
-    content="default-src * 'self'; script-src * 'self'; script-src-elem * 'self'; script-src-attr * 'self'; style-src * 'self'; style-src-elem * 'self' 'unsafe-inline'; style-src-attr * 'self'; img-src 'self' https://i.pravatar.cc;"/>
+    content="default-src * 'self'; script-src * 'self'; script-src-elem * 'self'; script-src-attr * 'self'; style-src * 'self'; style-src-elem * 'self' 'unsafe-inline'; style-src-attr * 'self'"
+    />
     <title>Vite + React</title>
   </head>
   <body>
